<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- GENERAL INFORAMTION -->
	
		<!-- Start App Information -->
	    <string name="app_name">Vroom!</string>
	    <!-- End App Information -->
	    
	    <!-- Start Settings Information -->
	    <string name="personal_settings_title">Personal Settings</string>
	    <string name="personal_settings_label">Personal Settings</string>
	    <string name="personal_settings_shortcut">p</string>
	    <string name="personal_settings_key_title">Vroom.com Access Key</string>
	    <string name="personal_settings_key_description">Your automatically generated access key for Vroom.com</string>
	    
	    <string name="device_settings_title">Device Settings</string>
	    <string name="device_settings_label">Device Settings</string>
	    <string name="device_settings_shortcut">d</string>
	    <string name="device_settings_mac_title">Bluetooth Adapter Mac Address</string>
	    <string name="device_settings_mac_description">The mac address of your Bluetooth/OBD-II adapter.</string>
	    <string name="device_settings_connect_title">Connect At Startup?</string>
	    <string name="device_settings_connect_description">Would you like to attempt to connect to this device when Vroom starts?</string>
	    <!-- End Settings Menu Information -->
	    
	    <!-- Start Special Settings Menu Information -->
	    <string name="connect_device_settings_label">Connect to Device</string>
	    <string name="connect_device_settings_shortcut">c</string>
	    
	    <string name="disconnect_device_settings_label">Disconnect from Device</string>
	    <string name="disconnect_device_settings_shortcut">s</string>
	    <!-- End Special Settings Menu Information -->
    
    <!-- CLASS INFORMATION -->
    
	    <!-- Start Vroom Information -->
	    <string name="engine_monitor_button_txt">monitor</string>
	    <string name="repair_button_txt">repair</string>
	    <string name="upload_button_txt">upload</string>
	    <string name="settings_button_txt">settings</string>
	    <string name="exit_button_txt">exit</string>
	   <!-- End Main Menu Button Information -->
	   
	   <!-- Start Monitor Information -->
	    <string name="monitor_title">Engine Monitor</string>
	    <!-- End Monitor Information -->
	    
	    <!-- Start Repair Information -->
	    <string name="repair_title">Repair Helper</string>
	    <!-- End Repair Information -->
	    
	    <!-- Start Upload Information -->
	    <string name="upload_title">Upload Vehicle Data</string>
	    <!-- End Upload Information -->
	    
	    <!-- Start Bluetooth Strings -->
	    <string name="button_scan">Scan</string>
	    <string name="title_other_devices">Other Devices</string>
	    <string name="title_paired_devices">Paired Devices</string>
	    <string name="none_paired">No paired devices found.</string>
	    <string name="scanning">Scanning for devices...</string>
	    <string name="select_device">Select A Device</string>
	    <string name="none_found">No Bluetooth devices were found.</string>
	    <string name="connectButtonText">Connect to Device</string>
	    <string name="deviceActivityTitle">Connect To Device</string>
	    <!-- End Bluetooth Strings -->
</resources>
