<?xml version="1.0" encoding="utf-8"?>
<!-- Start Main Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:padding="10dip"
    >
    <!-- Start Heading -->
	<TextView 
		android:id="@+id/header_text" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/app_name"
    	android:textColor="@color/alertGreen">
    </TextView>
    <!-- End Heading -->
    
    <!-- Start Buttons Table -->
    <TableLayout android:layout_height="fill_parent"
    			android:layout_width="fill_parent" 
    			android:id="@+id/button_layout" 
    			android:stretchColumns="1"
    			android:padding="15dip">
    	
    	<!-- Begin First Row of Buttons -->		
        <TableRow>
        			
            <Button 
            		android:background="@drawable/monitor" 
            		android:id="@+id/engine_monitor_button"
            		android:text="@string/engine_monitor_button_txt" 
            		android:width="60dip"
            		android:height="60dip"
            		android:textSize="16sp"></Button>
             		
             <!-- Invisible spacer button -->
   			<Button
		            android:visibility="invisible"/>
	            
            <Button android:id="@+id/repair_button"  
            		android:background="@drawable/repair" 
            		android:text="@string/repair_button_txt"
            		android:width="60dip"
            		android:height="60dip"
            		android:textSize="16sp"></Button>
        </TableRow>
        <!-- End First Row of Buttons -->
        <!-- Start Second Row of Buttons -->
        <TableRow>
        			
            <Button 
            		android:background="@drawable/upload" 
            		android:id="@+id/upload_button" 
            		android:text="@string/upload_button_txt"
            		android:width="60dip"
            		android:height="60dip"
            		android:textSize="16sp"></Button>
             
             <!-- Invisible spacer button -->              		
   			<Button

		            android:visibility="invisible"/>  
		                     		
            <Button 
            		android:background="@drawable/settings" 
            		android:id="@+id/settings_button"
            		android:text="@string/settings_button_txt"
            		android:width="60dip"
            		android:height="60dip"
            		android:textSize="16sp"></Button>
        </TableRow>
        <TableRow>
            <!-- Invisible spacer button -->              		
   			<Button

		            android:visibility="invisible"/>
   			<Button

		            android:visibility="invisible"/>  
        	<Button	
        			android:background="@drawable/exit"
        			android:id="@+id/exit_button"
        			android:text="@string/exit_button_txt"
        			android:width="40dip"
        			android:height="40dip"
        			android:textSize="16sp"></Button>
        </TableRow>
        <!-- End Second Row of Buttons -->
    </TableLayout>
    <!-- End Button Table -->
</LinearLayout>
<!-- End Main Layout -->
